--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ authors = [
 dependencies = [
     "rich>=13.7",
     "prompt_toolkit>=3.0",
+    "jinja2>=3.1",
     "pydantic>=2.6",
     "pydantic-settings>=2.2",
     "google-generativeai>=0.5",
